--- a/Locales/en/hotelcard.html
+++ b/Locales/en/hotelcard.html
@@ -7,7 +7,7 @@
     <div class="stars stars-{{stars}}"><span></span></div>
     <h1>{{name}}</h1>
 
-    <p class="noprint"><a href="main-hotelcard.html#" class="noreload">Добавить в избранное</a> / <a
+    <p class="noprint"><a href="main-hotelcard.html#" class="noreload">Add to Selected</a> / <a
             href="main-hotelcard.html#" class="noreload" onclick="window.print(); return false;">Print hotel info</a>
     </p>
 
@@ -64,7 +64,7 @@
             {{address}}<br/>
             Phone: {{phone}}<br/>
             Fax: {{fax}}<br/>
-            Email: {{email}}
+            E-mail: {{email}}
         </p>
 </script>
 <script type="text/html" id="dl-item-tmpl" class="partial">
@@ -185,7 +185,7 @@
 							<label><span>to</span><input type="text" name="order_to" id="order_to" class="date" value="02.08.2011" onchange="fixDate(this); xOrder.calcPrice();" /></label>
 							for <span class="search_nights_num">2</span> <span class="search_nights_word">nights</span>
 						</div>
-                         <div class="sideblock"><input type="button" id="findoffers" value="Find an apartment"></div
+                         <div class="sideblock"><input type="button" id="findoffers" value="Update Offers"></div
 						<div class="closer"></div>
 					</div>
 
