--- a/Locales/ru/hotelcard.html
+++ b/Locales/ru/hotelcard.html
@@ -7,8 +7,8 @@
     <div class="stars stars-{{stars}}"><span></span></div>
     <h1>{{name}}</h1>
 
-    <p class="noprint"><a href="main-hotelcard.html#" class="noreload">Добавить в избранное</a> / <a
-            href="main-hotelcard.html#" class="noreload" onclick="window.print(); return false;">Print hotel info</a>
+    <p class="noprint"><a href="main-hotelcard.html#" class="noreload">Добавить в Избранные</a> / <a
+            href="main-hotelcard.html#" class="noreload" onclick="window.print(); return false;">Печать информации об отеле</a>
     </p>
 
     <div class="contacts" style="display:none;">
@@ -18,26 +18,26 @@
     </div>
 
     <p class="noprint"><a href="main-hotelcard.html#" class="noreload"
-                          onclick="tttemp = this; $('.hotel .contacts').toggle('fast', function(){ $(tttemp).text( ($('.hotel .contacts').css('display') == 'block') ? 'Hide contacts' : 'Show contacts') }); return false;">Show
-        contacts</a> /
-        <a href="main-hotelcard.html#" class="noreload" id="bt_showmap">Show map</a></p>
+                          onclick="tttemp = this; $('.hotel .contacts').toggle('fast', function(){ $(tttemp).text( ($('.hotel .contacts').css('display') == 'block') ? 'Скрыть контакты' : 'Показать контакты') }); return false;">Показать
+        контакты</a> /
+        <a href="main-hotelcard.html#" class="noreload" id="bt_showmap">Посмотреть карту</a></p>
 
     <div class="descr">
         {{description}}
     </div>
 
-    <h3>Prices per night</h3>
+    <h3>Стоимость за ночь</h3>
     <table class="price">
         <tbody>
             {{#RoomCategories}}
                 {{#roomCategoryList}}
-                    <tr><td><a href="main-hotelcard.html#" class="noreload" id="bt_showaptgallery_{{hcRoomCategory}}">{{name}}</a></td><td class="price">from&nbsp;{{#hcPrice}}{{minPrice}}{{/hcPrice}}</td></tr>
+                    <tr><td><a href="main-hotelcard.html#" class="noreload" id="bt_showaptgallery_{{hcRoomCategory}}">{{name}}</a></td><td class="price">от&nbsp;{{#hcPrice}}{{minPrice}}{{/hcPrice}}</td></tr>
                 {{/roomCategoryList}}
             {{/RoomCategories}}
 		</tbody>
     </table>
 
-    <h3>Facilities</h3>
+    <h3>Услуги</h3>
     <dl>
         {{#Facilities}}
            {{#facilityList}}
@@ -48,7 +48,7 @@
 
     <div class="clearer"></div>
 
-    <h3>Policies</h3>
+    <h3>Политики</h3>
     <dl>
     {{#Policies}}
            {{#policyList}}
@@ -57,14 +57,14 @@
     {{/Policies}}
     </dl>
     <div class="clearer"></div>
-    <p class="noprint"><a href="main-hotelcard.html#" class="noreload">Add to Selected</a> / <a href="main-hotelcard.html#" class="noreload" onclick="window.print(); return false;">Print hotel info</a></p>
+    <p class="noprint"><a href="main-hotelcard.html#" class="noreload">Добавить в Избранные</a> / <a href="main-hotelcard.html#" class="noreload" onclick="window.print(); return false;">Печать информации об отеле</a></p>
 </script>
 <script type="text/html" id="hc_contacts_tmpl" class="partial">
        <p>
             {{address}}<br/>
-            Phone: {{phone}}<br/>
-            Fax: {{fax}}<br/>
-            Email: {{email}}
+            Тел.: {{phone}}<br/>
+            Факс: {{fax}}<br/>
+            E-mail: {{email}}
         </p>
 </script>
 <script type="text/html" id="dl-item-tmpl" class="partial">
@@ -76,11 +76,11 @@
 </script>
 <script type="text/html" id="ro_ratings_tmpl">
     <a href="main-hotelcard.html#" class="nou" id="bt_showgalleryAlt"><img class="main" src="{{#MainPhoto}}{{large}}{{/MainPhoto}}" width="211" height="211" alt="{{name}}" /></a>
-    <p class="noprint"><a href="main-hotelcard.html#" class="noreload" id="bt_showgallery">View all {{hcPhotos}} photos</a></p>
+    <p class="noprint"><a href="main-hotelcard.html#" class="noreload" id="bt_showgallery">Просмотреть все {{hcPhotos}} фото</a></p>
 
      {{>user_rating_tmpl}}
 
-    <h3>Visitors’ reviews</h3>
+    <h3>Отзывы клиентов</h3>
     <span id="reviewsHolder"></span>
     <div id="srPager" class="paging"></div>
 </script>
@@ -95,18 +95,18 @@
 <div class="comment">
     <p class="date">{{reviewDate}}</p>
     <p>{{comment}}</p>
-    <table class="rate"><tr><td width="1%">Rate</td><td class="rate"><div><span style="width:{{#calc}}{{rate}}{{/calc}}%">{{rate}}</span></div></td></tr></table>
-    <p class="author">{{author}} from {{#GeoLocation}}{{city}}, {{country}}{{/GeoLocation}}</p>
+    <table class="rate"><tr><td width="1%">Рейтинг</td><td class="rate"><div><span style="width:{{#calc}}{{rate}}{{/calc}}%">{{rate}}</span></div></td></tr></table>
+    <p class="author">{{author}} из {{#GeoLocation}}{{city}}, {{country}}{{/GeoLocation}}</p>
 </div>
 </script>
 
 <script type="text/html" id="user_rating_tmpl" class="partial">
     {{#Rating}}
-    <h3>Rating<span>
-    <strong>{{avgValue}}</strong> of 8</span></h3>
-    <div class="rating-bar"><span style="width:{{#calc}}{{avgValue}}{{/calc}}%">{{avgValue}} of 8</span></div>
+    <h3>Рейтинг<span>
+    <strong>{{avgValue}}</strong> из 8</span></h3>
+    <div class="rating-bar"><span style="width:{{#calc}}{{avgValue}}{{/calc}}%">{{avgValue}} из 8</span></div>
     {{#rateItemList}}
-        <h5>{{displayName}}<span><strong>{{value}}</strong> of 8</span></h5>
+        <h5>{{displayName}}<span><strong>{{value}}</strong> из 8</span></h5>
     {{/rateItemList}}
     {{/Rating}}
 </script>
@@ -135,11 +135,11 @@
 			{{description}}
 		</div>
 		<div class="links">
-			<p><a href="main-hotelcard.html#" class="close noreload">Close window</a></p>
+			<p><a href="main-hotelcard.html#" class="close noreload">Закрыть окно</a></p>
 		</div>
 	</div>
 	<div class="clearer"></div>
-	<a href="main-hotelcard.html#" class="close xclose" title="Close gallery"><span>Close</span></a>
+	<a href="main-hotelcard.html#" class="close xclose" title="Close gallery"><span>Закрыть</span></a>
 </div>
 </script>
 
@@ -168,70 +168,70 @@
 		<div class="clearer"></div>
 	</div>
 	<div class="clearer"></div>
-	<a href="main-hotelcard.html#" class="close xclose" title="Close map"><span>Close</span></a>
+	<a href="main-hotelcard.html#" class="close xclose" title="Закрыть карту"><span>Закрыть</span></a>
  </div>
 </script>
 
 <script type="text/html" id="calc_template">
-				<h2>Order now</h2>
+				<h2>Бронировать</h2>
 				<form action="../" id="orderform">
 
 					<div class="sideblock opener active orderDates">
-						<h3>Dates</h3>
+						<h3>Даты</h3>
 						<div class="label">
-							<label><span>from</span><input type="text" name="order_from" id="order_from" class="date" value="31.07.2011" onchange="fixDate(this); xOrder.calcPrice();" /></label>
+							<label><span>с</span><input type="text" name="order_from" id="order_from" class="date" value="31.07.2011" onchange="fixDate(this); xOrder.calcPrice();" /></label>
 						</div>
 						<div class="label">
-							<label><span>to</span><input type="text" name="order_to" id="order_to" class="date" value="02.08.2011" onchange="fixDate(this); xOrder.calcPrice();" /></label>
-							for <span class="search_nights_num">2</span> <span class="search_nights_word">nights</span>
+							<label><span>по</span><input type="text" name="order_to" id="order_to" class="date" value="02.08.2011" onchange="fixDate(this); xOrder.calcPrice();" /></label>
+							на <span class="search_nights_num">2</span> <span class="search_nights_word">ночи(-ей)</span>
 						</div>
-                         <div class="sideblock"><input type="button" id="findoffers" value="Find an apartment"></div
+                         <div class="sideblock"><input type="button" id="findoffers" value="Обновить предложения"></div
 						<div class="closer"></div>
 					</div>
 
 					<div class="apt-template">
 						<div class="apt-room-type">
-							<h3>Room type</h3>
+							<h3>Категория номера</h3>
 							<select name="roomtype1">
-								<option value="1" selected="selected">Single</option>
-								<option value="2">Double (left wing)</option>
-								<option value="3">Double (right wing)</option>
-								<option value="4">Triple</option>
+								<option value="1" selected="selected">Одноместный</option>
+								<option value="2">Двухместный (левое крыло)</option>
+								<option value="3">Двухместный (правое крыло)</option>
+								<option value="4">Трехместный</option>
 							</select>
-							<p class="available"><span class="yes number">7</span> <span class="yes">available</span> for chosen period</p>
-							<p class="unavailable"><span class="no">Not available</span> for chosen period.<br />
-						Try another room type.</p>
+							<p class="available"><span class="yes number">7</span> <span class="yes">доступно</span> для заданного периода</p>
+							<p class="unavailable"><span class="no">Не доступно</span> для заданного периода.<br />
+						Попробуйте другие категории номеров.</p>
 						</div>
 
 						<div class="apt-room-number">
-							<h3>Number of rooms</h3>
+							<h3>Кол-во номеров</h3>
 							<input type="text" name="rooms1" value="2" class="short" />
 						</div>
 
 						<div class="apt-room-extrabed">
-							<h3>Extra beds</h3>
+							<h3>Дополнительные места</h3>
 							<select name="extrabeds1">
 								<option value="1">1</option>
 								<option value="2" selected="selected">2</option>
 							</select>
 						</div>
 
-						<p><a href="main-hotelcard.html#" class="remove" title="Remove this apartment from order">Remove from order</a></p>
+						<p><a href="main-hotelcard.html#" class="remove" title="Удалить этот номер из заказа">Удалить из заказа</a></p>
 
 						<div class="closer"></div>
 					</div>
 
-					<div class="sideblock"><input type="button" class="add2order" value="Add an apartment"></div>
+					<div class="sideblock"><input type="button" class="add2order" value="Добавить номер"></div>
 
 					<div class="sideblock opener active orderMeals">
-						<h3>Meals</h3>
+						<h3>Питание</h3>
 						<select name="meals">
-							<option value="1">Full Board</option>
-							<option value="2" selected="selected">Half Board</option>
-							<option value="3">No Meals</option>
+							<option value="1">Полный пансион</option>
+							<option value="2" selected="selected">Полупансион</option>
+							<option value="3">Без питания</option>
 						</select>
 
-						<h3>Number of persons</h3>
+						<h3>Кол-во человек</h3>
 
 						<input type="text" name="mealsnum" class="short" value="2" />
 
@@ -239,10 +239,10 @@
 					</div>
 
 					<div class="sideblock opener inactive">
-						<h3>Total cost: <span id="orderCurrency" class="important">EUR</span> <span id="orderTotal" class="important">1,885</span></h3>
+						<h3>Итого: <span id="orderCurrency" class="important">EUR</span> <span id="orderTotal" class="important">1,885</span></h3>
 
 						<div class="label last">
-							<span class="label">Order</span><input type="submit" name="submit" value="Confirm" class="submit" />
+							<span class="label">Оформить</span><input type="submit" name="submit" value="Далее" class="submit" />
 						</div>
 
 					</div>
@@ -260,7 +260,7 @@
 
 	<div class="imagedescr">
 		<h3>{{name}}</h3>
-		<div class="price">{{currency}}&nbsp;{{minPrice}} per night</div>
+		<div class="price">{{currency}}&nbsp;{{minPrice}} за ночь</div>
 
 		<div class="gallery">
             {{#Photos}}
@@ -279,35 +279,35 @@
 
 		<div class="links">
             <span id="offersList">
-                <p class="available"><span class="yes number">7</span> <span class="yes">available</span> for chosen period</p>
+                <p class="available"><span class="yes number">7</span> <span class="yes">доступно</span> для заданного периода</p>
                     {{#offer}}
                     <div id="offer">с&nbsp;{{startDate}}&nbsp;по&nbsp;{{endDate}}&nbsp;-&nbsp;{{currency}}&nbsp;{{offerPrice}}</div>
                     {{/offer}}
             </span>
-			<p class="unavailable"><span class="no">Not available</span> for chosen period.<br />Try another room type.</p>
-			<p><span class="available"><a href="main-hotelcard.html#" class="noreload add2order">Add to order</a> / </span>
+			<p class="unavailable"><span class="no">Не доступно</span> для заданного периода.<br />Попробуйте другие категории номеров.</p>
+			<p><span class="available"><a href="main-hotelcard.html#" class="noreload add2order">Добавить к заказу</a> / </span>
 
-			<span class="host subscribehost"><a href="main-hotelcard.html#" class="bt_subscribe noreload">Subscribe to this offer</a>
+			<span class="host subscribehost"><a href="main-hotelcard.html#" class="bt_subscribe noreload">Подписаться на это предложение</a>
 
 				<form class="subscribeform" action="../"><div class="container">
 					<input type="text" name="mail" class="subscribe_mail login" value="E-mail" defvalue="E-mail" />
 
 					<select name="periodic">
-						<option value="1">Daily</option>
-						<option value="2" selected="selected">Weekly</option>
-						<option value="3">Monthly</option>
+						<option value="1">Ежедневно</option>
+						<option value="2" selected="selected">Еженедельно</option>
+						<option value="3">Ежемесячно</option>
 					</select>
 
 
 					<div class="diags">
-						<p class="sp_def">Get an actual search results to your E-mail. You can cancel subscription at any time using a link in confirmation or subscription letters.</p>
-						<p class="sp_signed_in">Get an actual search results to your E-mail. You can cancel subscription at any time using a link in subscription letters.</p>
-						<p class="sp_bad_mail">The specified e-mail seems to be incorrect. Please check it and try again.</p>
-						<p class="sp_no_mail">Please enter the valid e-mail address you wish to receive offers. We will send you a link to continue the subscription.</p>
-						<p class="sp_success">Subscription successful.<br />A confirmation letter has been sent to you. Please use provided links to confirm or cancel subscription.</p>
+						<p class="sp_def">Получать актуальные предложения согласно указанным параметрам на Ваш E-mail. Вы можете отменить подписку в любое время используя линк в письмах подписки.</p>
+						<p class="sp_signed_in">Получать актуальные предложения согласно указанным параметрам на Ваш E-mail. Вы можете отменить подписку в любое время используя линк в письмах подписки.</p>
+						<p class="sp_bad_mail">Указанный E-mail некорректен. Пожалуйста проверьте его и попробуйте снова.</p>
+						<p class="sp_no_mail">Пожалуйста, введите корректный E-mail на который Вы желаете получать предложения. Мы вышлем Вам ссылку на создание подписки.</p>
+						<p class="sp_success">Подписка успешно создана.<br /> Подтверждающее письмо выслано Вам. Пожалуйста, используйте ссылки в письме для подтверждения или отмены подписки.</p>
 					</div>
 
-					<p><a href="main-hotelcard.html#" class="bt_subscribe_action noreload" title="Subscribe to this search results">Subscribe</a></p>
+					<p><a href="main-hotelcard.html#" class="bt_subscribe_action noreload" title="Подписаться на это предложение">Подписаться</a></p>
 					<div class="clearer"></div>
 				</div></form>
 
@@ -317,6 +317,6 @@
 
 	</div>
 	<div class="clearer"></div>
-	<a href="main-hotelcard.html#" class="close xclose" title="Close gallery"><span>Close</span></a>
+	<a href="main-hotelcard.html#" class="close xclose" title="Закрыть галерею"><span>Закрыть</span></a>
 </div>
 </script>
