--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 <script type="text/javascript" src="/scripts/lang/ru.js"></script>
 <script type="text/javascript" src="/scripts/lang/de.js"></script>
 <script type="text/javascript" src="/scripts/debug/json2.js"></script>
-<script type="text/javascript" src="/scripts/jquery-1.6.1.min.js"></script>
+<!--Current version 1.6.4-->
+<script type="text/javascript" src="/scripts/jquery-1.6.min.js"></script>
 <script type="text/javascript" src="/scripts/js-webshim/minified/extras/modernizr-custom.js"></script>
 <script type="text/javascript" src="/scripts/js-webshim/minified/extras/loaders/yepnope.min.js"></script>
 <script type="text/javascript" src="/scripts/js-webshim/minified/extras/mousepress.js"></script>
@@ -72,8 +73,8 @@
 <script type="text/javascript" src="/scripts/debug/xcommon.js"></script>
 <script type="text/javascript" src="/scripts/models.js"></script>
 
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRlrZjuTPwvKSUZIF0_dsu12LmfuBQXsvcXvfazwWVzCQlwG4CP2O6mBQ" type="text/javascript"></script>
-<!--<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRIrSlBPavw7Ifq7KLBpU4q9tB4eBSDxh9Cn5W60dBeurP_D8-QpTvthg" type="text/javascript"></script>-->
+<!--<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRlrZjuTPwvKSUZIF0_dsu12LmfuBQXsvcXvfazwWVzCQlwG4CP2O6mBQ" type="text/javascript"></script>-->
+<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRIrSlBPavw7Ifq7KLBpU4q9tB4eBSDxh9Cn5W60dBeurP_D8-QpTvthg" type="text/javascript"></script>
 <script type="text/javascript">
 //$.webshims.setOptions('forms', { overrideMessages: true });
 $.webshims.polyfill('lightweight');
