--- a/Locales/de/searchResults.html
+++ b/Locales/de/searchResults.html
@@ -1,36 +1,36 @@
 <script type="text/html" id="sortmenu">
- <h4 class="lookfor nodisplay">Looking for: rooms in 2, 3 or 5 star hotel, for 8 nights from 22.09.2008 to 29.09.2008, for 2 persons, with Full Board or Half Board meals, from 60 to 80 EUR per night, with Parking and Internet.</h4>
-			<h3 class="results-stat"><strong>{{offersCount}}</strong> offers in <strong>{{hotelsCount}}</strong> hotels found.<br />
-			<span class="noprint"><a href="main-results.html#" class="noreload" onclick="$(this).parent().hide(); return switchSearchtype('advanced')">Tell us more</a> for better fit or </span>
-			<span class="host subscribehost noprint"><a href="main-results.html#" class="bt_subscribe noreload">Subscribe to similar offers</a>.
+ <h4 class="lookfor nodisplay">Suchen: Zimmer in 2, 3 oder 5-Sterne-Hotel, 8 Nachte vom 22.09.2008 bis 29.09.2008, fur 2 Personen, mit Vollpension oder Halbpension Mahlzeiten, 60 bis 80 EUR pro Nacht, mit Parkplatz und Internet.</h4>
+			<h3 class="results-stat"><strong>{{offersCount}}</strong> Angebote in <strong>{{hotelsCount}}</strong> Hotels gefunden.<br />
+			<span class="noprint"><a href="main-results.html#" class="noreload" onclick="$(this).parent().hide(); return switchSearchtype('advanced')">Erzahlen Sie uns mehr</a> fur bessere Passform und </span>
+			<span class="host subscribehost noprint"><a href="main-results.html#" class="bt_subscribe noreload">Abonnieren Sie ahnliche Angebote</a>.
 
 				<form class="subscribeform" action="../"><div class="container">
 					<input type="text" name="mail" class="subscribe_mail login" value="E-mail" defvalue="E-mail" />
 
 					<select name="periodic">
-						<option value="1">Daily</option>
-						<option value="2" selected="selected">Weekly</option>
-						<option value="3">Monthly</option>
+						<option value="1">Taglich</option>
+						<option value="2" selected="selected">Wochentlich</option>
+						<option value="3">Monatlich</option>
 					</select>
 
 
 					<div class="diags">
-						<p id="sp_def">Get an actual search results to your E-mail. You can cancel subscription at any time using a link in confirmation or subscription letters.</p>
-						<p id="sp_signed_in">Get an actual search results to your E-mail. You can cancel subscription at any time using a link in subscription letters.</p>
-						<p id="sp_bad_mail">The specified e-mail seems to be incorrect. Please check it and try again.</p>
-						<p id="sp_no_mail">Please enter the valid e-mail address you wish to receive offers. We will send you a link to continue the subscription.</p>
-						<p id="sp_success">Subscription successful.<br />A confirmation letter has been sent to you. Please use provided links to confirm or cancel subscription.</p>
+						<p id="sp_def">Holen Sie sich einen tatsachlichen Suchergebnisse auf Ihre E-Mail. Sie konnen Abonnement jederzeit uber einen Link zur Bestatigung oder zur Zeichnung Briefe aufzuheben.</p>
+						<p id="sp_signed_in">Holen Sie sich einen tatsachlichen Suchergebnisse auf Ihre E-Mail. Sie konnen Abonnement jederzeit uber einen Link zur Bestatigung oder zur Zeichnung Briefe aufzuheben.</p>
+						<p id="sp_bad_mail">Die angegebene E-Mail scheint falsch zu sein. Bitte uberprufen Sie es und versuchen Sie es erneut.</p>
+						<p id="sp_no_mail">Bitte geben Sie die gultige E-Mail-Adresse, die Sie Angebote zu erhalten. Wir senden Ihnen einen Link, um das Abonnement fortzusetzen.</p>
+						<p id="sp_success">Abonnement erfolgreich.<br /> Ein Bestatigungsschreiben wurde Ihnen gesendet. Bitte verwenden Sie bereitgestellten Links, um zu bestatigen oder kundigen.</p>
 					</div>
 
-					<a href="main-results.html#" class="bt_subscribe_action noreload" title="Subscribe to this search results">Subscribe</a>
+					<a href="main-results.html#" class="bt_subscribe_action noreload" title="Diese Suche fuhrt">Zeichnen</a>
 				</div></form>
 
 			</span>
 			</h3>
 
 			<div class="label sort noprint" id="sortBar">
-				<span class="label" id="sortHolder">Sort by</span>
-				<a href="#!/search/sortby/name" class="clickablesort"><span class="asc" id="sbt_name"></span>Name</a> <a href="#!/search/sortby/popularity" class="clickablesort"><span class="none" id="sbt_popularity"></span>Popularity</a> <a href="#!/search/sortby/stars"  class="clickablesort"><span class="desc" id="sbt_stars"></span>Stars</a> <a href="#!/search/sortby/price" class="clickablesort"><span class="none" id="sbt_price"></span>Price</a>
+				<span class="label" id="sortHolder">Sortieren nach</span>
+				<a href="#!/search/sortby/name" class="clickablesort"><span class="asc" id="sbt_name"></span>Name</a> <a href="#!/search/sortby/popularity" class="clickablesort"><span class="none" id="sbt_popularity"></span>Popularitat</a> <a href="#!/search/sortby/stars"  class="clickablesort"><span class="desc" id="sbt_stars"></span>Sterne</a> <a href="#!/search/sortby/price" class="clickablesort"><span class="none" id="sbt_price"></span>Preis</a>
 			</div>
  </script>
 <script type="text/html" id="src_hotellist_tmpl">
@@ -46,7 +46,7 @@
 </script>
 <script type="text/html" id="ro_block_tmpl">
         <div id="randomsblock" class="container">
-				<h2>Top popular</h2>
+				<h2>Zufallige Angebote</h2>
 				<p class="location">in <a href="main-results.html#">Amsterdam</a>, Holland </p>
 				<div id="randomslist"></div>
         </div>
@@ -59,7 +59,7 @@
         <div class="stars stars-{{stars}}"><span></span></div>
         <p class="info">aus <strong>{{currency}}&nbsp;{{minOfferPrice}}</strong></p>
         <p class="info"><a href="main-results.html#">Add to Selected</a> /<br />
-        <a href="main-results.html#">Print hotel info</a></p>
+        <a href="main-results.html#">Print Hotel Info</a></p>
         <div class="clearer"></div>
     </div>
 </div>
