--- a/Locales/ru/searchResults.html
+++ b/Locales/ru/searchResults.html
@@ -1,36 +1,36 @@
 <script type="text/html" id="sortmenu">
- <h4 class="lookfor nodisplay">Looking for: rooms in 2, 3 or 5 star hotel, for 8 nights from 22.09.2008 to 29.09.2008, for 2 persons, with Full Board or Half Board meals, from 60 to 80 EUR per night, with Parking and Internet.</h4>
-			<h3 class="results-stat"><strong>{{offersCount}}</strong> offers in <strong>{{hotelsCount}}</strong> hotels found.<br />
-			<span class="noprint"><a href="main-results.html#" class="noreload" onclick="$(this).parent().hide(); return switchSearchtype('advanced')">Tell us more</a> for better fit or </span>
-			<span class="host subscribehost noprint"><a href="main-results.html#" class="bt_subscribe noreload">Subscribe to similar offers</a>.
+ <h4 class="lookfor nodisplay">Параметры поиска: комнаты в 2, 3 или 5 звёздном отеле, на 8 ночи(ей) с 22.09.2008 по 29.09.2008, для 2 человек, питание Полный Пансион или Полупансион, от 60 до 80 EUR за ночь, а также Паркинг и Интернет.</h4>
+			<h3 class="results-stat">Найдено <strong>{{offersCount}}</strong> предложений в <strong>{{hotelsCount}}</strong> отелях.<br />
+			<span class="noprint"><a href="main-results.html#" class="noreload" onclick="$(this).parent().hide(); return switchSearchtype('advanced')">Воспользуйтесь расширенным поиском</a> для уточнения результата или </span>
+			<span class="host subscribehost noprint"><a href="main-results.html#" class="bt_subscribe noreload">Подпишитесь на подобные предложения</a>.
 
 				<form class="subscribeform" action="../"><div class="container">
 					<input type="text" name="mail" class="subscribe_mail login" value="E-mail" defvalue="E-mail" />
 
 					<select name="periodic">
-						<option value="1">Daily</option>
-						<option value="2" selected="selected">Weekly</option>
-						<option value="3">Monthly</option>
+						<option value="1">Ежедневно</option>
+						<option value="2" selected="selected">Еженедельно</option>
+						<option value="3">Ежемесячно</option>
 					</select>
 
 
 					<div class="diags">
-						<p id="sp_def">Get an actual search results to your E-mail. You can cancel subscription at any time using a link in confirmation or subscription letters.</p>
-						<p id="sp_signed_in">Get an actual search results to your E-mail. You can cancel subscription at any time using a link in subscription letters.</p>
-						<p id="sp_bad_mail">The specified e-mail seems to be incorrect. Please check it and try again.</p>
-						<p id="sp_no_mail">Please enter the valid e-mail address you wish to receive offers. We will send you a link to continue the subscription.</p>
-						<p id="sp_success">Subscription successful.<br />A confirmation letter has been sent to you. Please use provided links to confirm or cancel subscription.</p>
+						<p id="sp_def">Получать актуальные предложения согласно указанным параметрам на Ваш E-mail. Вы можете отменить подписку в любое время используя линк в письмах подписки.</p>
+						<p id="sp_signed_in">Получать актуальные предложения согласно указанным параметрам на Ваш E-mail. Вы можете отменить подписку в любое время используя линк в письмах подписки.</p>
+						<p id="sp_bad_mail">Указанный E-mail некорректен. Пожалуйста проверьте его и попробуйте снова.</p>
+						<p id="sp_no_mail">Пожалуйста, введите корректный E-mail на который Вы желаете получать предложения. Мы вышлем Вам ссылку на создание подписки.</p>
+						<p id="sp_success">Подписка успешно создана.<br /> Подтверждающее письмо выслано Вам. Пожалуйста, используйте ссылки в письме для подтверждения или отмены подписки.</p>
 					</div>
 
-					<a href="main-results.html#" class="bt_subscribe_action noreload" title="Subscribe to this search results">Subscribe</a>
+					<a href="main-results.html#" class="bt_subscribe_action noreload" title="Оформить подписку согласно параметрам данного поиска">Подписаться</a>
 				</div></form>
 
 			</span>
 			</h3>
 
 			<div class="label sort noprint" id="sortBar">
-				<span class="label" id="sortHolder">Sort by</span>
-				<a href="#!/search/sortby/name" class="clickablesort"><span class="asc" id="sbt_name"></span>Name</a> <a href="#!/search/sortby/popularity" class="clickablesort"><span class="none" id="sbt_popularity"></span>Popularity</a> <a href="#!/search/sortby/stars"  class="clickablesort"><span class="desc" id="sbt_stars"></span>Stars</a> <a href="#!/search/sortby/price" class="clickablesort"><span class="none" id="sbt_price"></span>Price</a>
+				<span class="label" id="sortHolder">Сортировать по</span>
+				<a href="#!/search/sortby/name" class="clickablesort"><span class="asc" id="sbt_name"></span>Имя</a> <a href="#!/search/sortby/popularity" class="clickablesort"><span class="none" id="sbt_popularity"></span>Популярность</a> <a href="#!/search/sortby/stars"  class="clickablesort"><span class="desc" id="sbt_stars"></span>Кол-во звёзд</a> <a href="#!/search/sortby/price" class="clickablesort"><span class="none" id="sbt_price"></span>Стоимость</a>
 			</div>
  </script>
 <script type="text/html" id="src_hotellist_tmpl">
@@ -46,8 +46,8 @@
 </script>
 <script type="text/html" id="ro_block_tmpl">
         <div id="randomsblock" class="container">
-				<h2>Top popular</h2>
-				<p class="location">in <a href="main-results.html#">Amsterdam</a>, Holland </p>
+				<h2>Случайные предложения</h2>
+				<p class="location">в <a href="main-results.html#">Амстердам</a>, Голландия </p>
 				<div id="randomslist"></div>
         </div>
 </script>
@@ -58,8 +58,8 @@
         <a href="#!/card/{{hotelId}}" title="{{name}}"><img src="{{#MainPhoto}}{{small}}{{/MainPhoto}}" alt="{{name}}" /></a>
         <div class="stars stars-{{stars}}"><span></span></div>
         <p class="info">от <strong>{{currency}}&nbsp;{{minOfferPrice}}</strong></p>
-        <p class="info"><a href="main-results.html#">Add to Selected</a> /<br />
-        <a href="main-results.html#">Print hotel info</a></p>
+        <p class="info"><a href="main-results.html#">Добавить в Избранные</a> /<br />
+        <a href="main-results.html#">Печать информации об отеле</a></p>
         <div class="clearer"></div>
     </div>
 </div>
